# MoonMind

./: .dockerignore  .editorconfig  .env-template  .env.vllm-template  .geminiignore  .gitattributes  .gitignore  .gitmodules  .npmignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  GEMINI.md  LICENSE  NOTICE  ProposalReviews.md  ProposedIgnore.md  README.md  SchedulerMigration.md  SecretStore.md  WorkerGitAuth.md  WorkerVectorEmbedding.md  action_status.json  artifacts  check_defaults.py  config.toml  data-model.md  debug_side_effect.txt  debug_test.py  docker-compose.claude-host.yaml  docker-compose.codex-host.yaml  docker-compose.dev.yaml  docker-compose.downloader.yaml  docker-compose.job.yaml  docker-compose.ollama.yaml  docker-compose.openhands.yaml  docker-compose.pytest.yaml  docker-compose.test.yaml  docker-compose.tests.yaml  docker-compose.vllm.yaml  (+53 more)
.codex/: auth.json  config.toml  history.jsonl  version.json
.gemini/: settings.json  skills
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.moonmind/: pr-2401-review-fix.patch
.qwen/: settings.json
.specify/: feature.json
api_service/: Dockerfile  __init__.py  auth.py  auth_providers.py  config.template.toml  dashboard_static.py  entrypoint.sh  main.py  prestart.sh  requirements.txt  test_ui_route.py  ui_assets.py  ui_boot.py
artifacts/: batch_pr_resolver_result.json  github-issue-implement-assessment.json  github-issue-implement-brief.json  jira-orchestrate-pr.json  pr_resolver_addressed_comments.json  pr_resolver_full_result.json  pr_resolver_result.json  pr_resolver_snapshot.json
artifacts-root-owned-context/: jira-implement-assessment.json  jira-implement-brief.json
artifacts.doc-reconcile-output/: jira-orchestrate-doc-reconcile.json
celery_worker/: __init__.py  gemini_tasks.py  gemini_worker.py  runtime_mode.py  speckit_worker.py  startup_checks.py
contracts/: checkpoint-branch-compare-promote.openapi.yaml
docs/: Architecture.md  CodexCliWorkers.md  CodexMcpToolsAdapter.md  CodexTaskQueue.md  DockerOutOfDocker.md  DocumentationArchitecture.md  DocumentationArchitectureValidation.md  GeminiCliWorkers.md  JulesClientAdapter.md  JulesGuide.md  LegacyDocsReview.md  LiveTaskHandoff.md  LlamaIndexManifestSystem.md  MIGRATION_GENERATION.md  ManifestTaskSystem.md  MemoryArchitecture.md  MemoryResearch.md  MoonMindArchitecture.md  MoonMindRoadmap.md  OpenClawIntegration.md  OrchestratorArchitecture.md  OrchestratorTaskRuntime.md  PostgresConsolidationPlan.md  README.md  SecretStore.md  SkillGithubPrResolver.md  SpecKitAutomation.md  SpecKitAutomationInstructions.md  SpecRemovalPlan.md  TailwindStyleSystem.md  TaskArchitecture.md  TaskCancellation.md  TaskDashboardStyleSystem.md  TaskEditingSystem.md  TaskFinishSummarySystem.md  TaskPlan.md  TaskPresetsSystem.md  TaskProposalQueue  TaskProposalQueue.md  TaskQueueSystem.md  (+19 more)
examples/: context_protocol_client.py  manifest-full-example.yaml  manifest-github-reader.yaml  readers-full-example.yaml  readers-githubrepositoryreader-example.yaml
fastapi/: Dockerfile  main.py  requirements.txt
frontend/: eslint.config.mjs  tsconfig.json  vite.config.ts  vitest.browser.config.ts
init_db/: init_db_entrypoint.sh  init_vector_db.py
init_db_scripts/: 01-create-dbs.sh  01-create-dbs.sql
keycloak/: realm-export.json
memory/: MEMORY.md  frontend-vitest-colon-path-workaround.md  launcher-test-broker-env-failures.md  mm954-workflow-list-current-page-sort.md  moonspec-breakdown-output-gitignored.md  pre-existing-temporal-worker-runtime-failures.md  pre-existing-test-executions-failures.md
moonai/: delete_collection.py  download_model.py  download_models.py
moonmind/: cli.py  container_job_cli.py  models_cache.py  runtime_intent.py  workflow_docker_mode.py
moonmind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
moonmind_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pr_resolver_core/: __init__.py  classify.py  evidence.py  models.py  normalize.py  transition.py
rag/: Dockerfile
reports/: remediation_attempt-1.json  remediation_attempt-2.json  remediation_attempt-3.json  remediation_attempt-4.json  remediation_attempt-5.json  remediation_attempt-6.json  remediation_verification-1.json  remediation_verification-2.json  remediation_verification-3.json  remediation_verification-4.json  remediation_verification-5.json  remediation_verification-6.json
samples/: github_manifest.yaml
scripts/: backfill_template_recents.py  create_issue_implement_preset_workflows.py  create_jira_implement_preset_workflows.py  dev.ps1  download-models-old.ps1  download-models.ps1  entrypoint-ollama.sh  get-qdrant.py  get_action_results.py  get_latest_action_status.py  init_vector_db.py  migrate_to_temporal_schedules.py  ollama.ps1  run.ps1  run_summarizer.py  teardown_temporal.py  temporal_clean_state.sh  temporal_e2e_test.py  test-integration.ps1  test-unit.ps1  test.ps1  test_temporal_e2e.py  verify_gemini_install.sh
specs/: breakdown.md  implement-phase-2-using-test-driven-deve-0a369d2e
tests/: check_qdrant_collections_dag_test.py  confluence_connector_test.py  conftest.py  ingest_confluence_dag_test.py  qdrant_connector_test.py  test_e2e_runner.py  test_jira_story_planner.py  test_local_dev.py  test_teardown.py
tools/: audit_status_tokens.py  auth-claude-volume-oauth.sh  auth-claude-volume-token.sh  auth-claude-volume.sh  auth-codex-volume.sh  auth-cursor-volume.sh  auth-gemini-volume.sh  auth-tmate-bootstrap-claude.sh  auth-tmate-bootstrap-codex.sh  auth-tmate-bootstrap-cursor.sh  auth-tmate-bootstrap-gemini.sh  bootstrap-openclaw-codex-volume.sh  build-and-run.ps1  build-dashboard-css.sh  build_omnigent_conformance_report.py  build_omnigent_embedded_acceptance.py  check-no-claude-oauth-refs.sh  check_alembic_graph.py  check_documentation_architecture.py  check_github_workflow_names.py  check_openapi_affecting_changes.sh  check_removed_capability_semantics.py  check_terminology.sh  cleanup-docker-space.sh  dev-insecure.ps1  dev-keycloak.ps1  download-models-old.ps1  downloader.ps1  entrypoint-ollama.sh  get-qdrant.py  (+55 more)
(+7309 files in other folders)
