[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "moonmind"
version = "0.1.0"
description = "MoonMind RAG application and supporting tools."
readme = "README.md"
license = "MIT"
authors = ["MoonMind Contributors <opensource@moonmind.ai>"]
packages = [{ include = "moonmind" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "~=0.129.0"
starlette = ">=0.49.1,<1.0.0"
python-multipart = ">=0.0.22,<0.1.0"
orjson = ">=3.11.5,<4.0.0"
pypdf = ">=6.1.3,<7.0.0"
uvicorn = "~=0.41.0"
celery = "~=5.4.0"
pydantic = "~=2.11.7"
pydantic-settings = "~=2.10.1"
langchain = "~=1.2.10"
langchain-community = "~=0.4.1"
langchain-google-community = "~=3.0.5"
langchain-googledrive = "~=0.3.35"
langchain-ollama = "~=1.0.1"
langchain-qdrant = "~=1.1.0"
langsmith = "~=0.4.4"
llama-index = "~=0.14.14"
llama-index-embeddings-google-genai = "~=0.3.2"
llama-index-embeddings-ollama = "~=0.8.6"
llama-index-readers-confluence = "~=0.6.1"
llama-index-readers-file = "~=0.5.6"
llama-index-readers-github = "~=0.10.0"
llama-index-readers-google = "~=0.7.2"
llama-index-readers-jira = "~=0.5.1"
llama-index-vector-stores-qdrant = "~=0.9.1"
qdrant-client = "~=1.16.0"
PyGithub = "~=2.6.1"
google-generativeai = "~=0.8.6"
openai = ">=1.108.1,<3.0.0"
ollama = "~=0.6.0"
anthropic = "~=0.79.0"
llama-index-llms-anthropic = "~=0.10.8"
httpx = "~=0.28.1"
atlassian-python-api = "~=4.0.7"
beautifulsoup4 = "~=4.14.3"
html2text = "~=2024.2.26"
lxml = "~=6.0.0"
datasets = "~=3.6.0"
pillow = ">=12.1.1,<13.0.0"
pytesseract = "~=0.3.13"
requests = "~=2.32.4"
PyYAML = ">=6.0.2"
asyncpg = "~=0.31.0"
SQLAlchemy = "~=2.0.46"
docker = "~=7.1.0"
"fastapi-users" = { version = "~=15.0.4", extras = ["sqlalchemy"] }
"PyJWT" = { version = ">=2.11.0,<3.0.0", extras = ["crypto"] }
alembic = "~=1.18.4"
sqlalchemy-utils = "~=0.42.1"
cryptography = "~=46.0.5"
psycopg2-binary = "~=2.9.11"
jinja2 = "~=3.1.4"
gitpython = "~=3.1.42"
toml = "~=0.10.2"
pydantic-extra-types = "~=2.10.1"
structlog = "~=25.5.0"
pytest = { version = "~=8.4.2", optional = true }
pytest-mock = { version = "~=3.14.1", optional = true }
pytest-asyncio = { version = "^0.23.7", optional = true }
typer = "~=0.12.3"

[tool.poetry.extras]
tests = ["pytest", "pytest-mock", "pytest-asyncio"]

[tool.poetry.scripts]
moonmind = "moonmind.cli:main"
moonmind-codex-worker = "moonmind.agents.codex_worker.cli:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-ignore = ["E402", "E722", "F841"]

[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests that exercise orchestrator workflows.",
]

[tool.pre-commit]
repos = []
