[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "moonmind"
version = "0.1.0"
description = "MoonMind RAG application and supporting tools."
readme = "README.md"
license = "MIT"
authors = ["MoonMind Contributors <opensource@moonmind.ai>"]
packages = [{ include = "moonmind" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "~=0.135.3"
starlette = ">=0.49.1,<2.0.0"
python-multipart = ">=0.0.22,<0.1.0"
orjson = ">=3.11.5,<4.0.0"
uvicorn = "~=0.44.0"
pydantic = "~=2.12.5"
pydantic-settings = "~=2.13.1"
llama-index = "~=0.14.15"
llama-index-embeddings-google-genai = "~=0.5.0"
llama-index-embeddings-ollama = "~=0.9.0"
llama-index-embeddings-openai = "~=0.5.2"
llama-index-readers-confluence = "~=0.7.0"
llama-index-readers-file = "~=0.5.6"
llama-index-readers-github = "~=0.11.1"
llama-index-readers-google = "~=0.7.2"
llama-index-readers-jira = "~=0.6.0"
llama-index-vector-stores-qdrant = "~=0.10.0"
qdrant-client = "~=1.17.1"
PyGithub = "~=2.9.0"
google-generativeai = "~=0.8.6"
openai = ">=1.108.1,<3.0.0"
ollama = "~=0.6.0"
anthropic = "~=0.94.0"
llama-index-llms-anthropic = "~=0.11.2"
httpx = "~=0.28.1"
atlassian-python-api = "~=4.0.7"
requests = "~=2.33.1"
boto3 = "~=1.42.88"
# Temporary pin until a patched NLTK release is published for CVE/Zip Slip in downloader.
PyYAML = ">=6.0.2"
asyncpg = "~=0.31.0"
SQLAlchemy = "~=2.0.49"
docker = "~=7.1.0"
"fastapi-users" = { version = "~=15.0.4", extras = ["sqlalchemy"] }
"PyJWT" = { version = ">=2.11.0,<3.0.0", extras = ["crypto"] }
alembic = "~=1.18.4"
sqlalchemy-utils = "~=0.42.1"
cryptography = "~=46.0.7"
psycopg2-binary = "~=2.9.11"
jinja2 = "~=3.1.4"
toml = "~=0.10.2"
structlog = "~=25.5.0"
pytest = { version = "~=9.0.2", optional = true }
pytest-mock = { version = "~=3.15.1", optional = true }
pytest-asyncio = { version = "^1.3.0", optional = true }
pytest-xdist = { version = "~=3.8.0", optional = true }
pytest-timeout = { version = "~=2.4.0", optional = true }
typer = "~=0.23.1"
click = "8.3.2"
gitpython = "^3.1.46"
temporalio = "~=1.24.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"

[tool.poetry.extras]
tests = ["pytest", "pytest-mock", "pytest-asyncio", "pytest-xdist", "pytest-timeout"]

[tool.poetry.scripts]
moonmind = "moonmind.cli:main"
moonmind-codex-worker = "moonmind.agents.codex_worker.cli:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-ignore = ["E402", "E722", "F841"]

[tool.pytest.ini_options]
faulthandler_timeout = 300
markers = [
    "agentkit: Spec Kit workflow tests.",
    "asyncio: marks tests that require an asyncio event loop.",
    "integration: marks integration tests that exercise workflows.",
    "integration_ci: marks hermetic integration tests that are safe for required CI.",
    "provider_verification: marks live external-provider verification tests.",
    "jules: marks tests specific to the Jules provider.",
    "requires_credentials: marks tests that require real provider credentials.",
]

[tool.pre-commit]
repos = []

[dependency-groups]
dev = [
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "playwright (>=1.58.0,<2.0.0)"
]
